Changes to be committed: 	modified:   KeyboardDivitDeneme2/app/src/main/java/com/example/nogay/keyboarddivitdeneme2/SimpleIME.java 	modified:   KeyboardDivitDeneme2/app/src/main/res/layout/keyboard.xml 	modified:   KeyboardDivitDeneme2/app/src/main/res/values/colors.xml 	modified:   KeyboardDivitDeneme2/app/src/main/res/xml/numkeyboard.xml 	modified:   KeyboardDivitDeneme2/app/src/main/res/xml/qwerty.xml

--- a/KeyboardDivitDeneme2/app/src/main/res/layout/keyboard.xml
+++ b/KeyboardDivitDeneme2/app/src/main/res/layout/keyboard.xml
@@ -5,5 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
-    android:keyPreviewLayout ="@layout/preview"
+    android:keyBackground="@drawable/keybackground"
+    android:background="@color/colorBlack"
+    android:keyTextColor="#ffffff"
     />
